fix credits overlap

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ svg {
 }
 
 #creditlines   {
-  padding-top: 30px;
+  padding-top: 20px;
   padding-bottom: 10px;
   position: relative;
   white-space: normal;
